Fixed issue on not showing selected tab on start and refresh

--- a/genume/view/styles.css
+++ b/genume/view/styles.css
@@ -36,6 +36,6 @@
 }
 
 /* Treat as a pseudoclass */
-.tab-clicked {
+.tab-active {
     background-color: @accent_color_light; 
 }
